backend/tests/snapshots/apis__user_auth_login.snap
---
source: tests/apis.rs
expression: res
---
HTTP/1.1 200 OK
content-type: application/json
x-request-id: 00000000000000000000000001
content-length: 11

{"Ok":null}
