backend/tests/snapshots/apis__user_auth_revoke_tokens.snap
---
source: tests/apis.rs
expression: res
---
HTTP/1.1 200 OK
content-type: application/json
x-request-id: 00000000000000000000000002
content-length: 11

{"Ok":null}
